2019-09-17  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.2-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.2-alpha07: XTerra';git push
	git tag -a 4.8.2-alpha07 -m 'ncremap/ncclimo bch/job loops;nco.texi rgr';git push --tags

	* Streamline batch loops in ncremap, ncclimo sbs and sbs rgr, and ncclimo clm dly loops

2019-09-12  Charlie Zender  <zender@uci.edu>

	* Document regridding algorithm in nco.texi

	* NCO 4.8.2-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.2-alpha06: XTerra';git push
	git tag -a 4.8.2-alpha06 -m 'rhea SLURM;ncremap GSG ELM/MPAS-SI, ntp_mth;ncks chk_nan';git push --tags

	* Make "ESMF renormalization" of fields without missing values (i.e., "destarea") opt-in rather than default
	"destarea" and frac_b = frc_dst together set flg_frc_nrm
	Formerly flg_frc_nrm triggered ESMF renormalization by default
	Users must now explicitly set --rnr_thr to a value in [0.0,1.0]	(and have flg_frc_nrm be true) to trigger it
	This keep conservative maps conservative by default
	NB: This "ESMF renormalization" normalizes by frac_b == frc_dst regardless of rnr_thr

2019-09-10  Charlie Zender  <zender@uci.edu>

	* GSG regridding works for MPAS Seaice. Yay!

	* Re-do GSG normalization to allow for sgs_frc_out == 0.0 because MPAS-Seaice timeMonthly_avg_iceAreaCell is time-mean area-fraction of sea ice and is usually zero

	* ncremap make -P mpasseaice exactly synonymous with -P mpascice which now always calls GSG regridding

	* Cause nco_chk_nan() to exit noisily with nco_exit(EXIT_FAILURE)

	* MPAS GSG timeMonthly_avg_absorbedShortwaveFluxInitialArea has NaNs, why?

	* Eliminate wgt_vld_out from GSG algorithm for variables with missing values

	* MPAS GSG ice-fraction now borken, why? Fixed (was skipping that one variable)

	* Fix uninitialized cnv structure

	* Multi-level ELM GSG with threads works well. Yay!

	* GSG fails on ELM with --thr=2, SGS succeeds, why? FIXED out-of-bounds idx issue
