@@ -4,6 +4,8 @@
 	cd ~/nco;git commit -a -m 'Version 4.8.2-alpha07: XTerra';git push
 	git tag -a 4.8.2-alpha07 -m 'ncremap/ncclimo bch/job loops;nco.texi rgr';git push --tags
 
+	* Allow sgs_frc_nm to contain external local filename, then slash, then actual sgs_frc_nm
+
 	* Streamline batch loops in ncremap, ncclimo sbs and sbs rgr, and ncclimo clm dly loops
 
 2019-09-12  Charlie Zender  <zender@uci.edu>
